crates/cli/tests/snapshots/run_system_test__system_windows__handles_process_exit_nonzero.snap
---
source: crates/cli/tests/run_system_test.rs
expression: get_assert_output(&assert)
---
▪▪▪▪ windows:exitNonZero
stdout
▪▪▪▪ windows:exitNonZero (100ms)
stderr 

 ERROR  Process cmd.exe failed with a 1 exit code.



