crates/cli/tests/snapshots/run_system_test__system_windows__handles_process_exit_zero.snap
---
source: crates/cli/tests/run_system_test.rs
expression: get_assert_output(&assert)
---
▪▪▪▪ windows:exitZero
stdout
▪▪▪▪ windows:exitZero (100ms, f7be3f01)

Tasks: 1 completed
 Time: 100ms

stderr 


