crates/cli/tests/snapshots/run_system_test__system_windows__inherits_moon_env_vars.snap
---
source: crates/cli/tests/run_system_test.rs
expression: "get_path_safe_output(&assert, fixture.path())"
---
▪▪▪▪ windows:envVarsMoon
MOON_TARGET=windows:envVarsMoon
MOON_PROJECT_ID=windows
▪▪▪▪ windows:envVarsMoon (100ms)

Tasks: 1 completed
 Time: 100ms



