crates/cli/tests/snapshots/run_system_test__system_windows__passes_args_through.snap
---
source: crates/cli/tests/run_system_test.rs
expression: get_assert_output(&assert)
---
▪▪▪▪ windows:passthroughArgs
-aBc --opt value --optCamel=value foo "'bar baz'" --opt-kebab 123
▪▪▪▪ windows:passthroughArgs (100ms)

Tasks: 1 completed
 Time: 100ms



