crates/cli/tests/snapshots/run_system_test__system_windows__retries_on_failure_till_count.snap
---
source: crates/cli/tests/run_system_test.rs
expression: get_assert_output(&assert)
---
▪▪▪▪ windows:retryCount
stdout
▪▪▪▪ windows:retryCount (100ms)
▪▪▪▪ windows:retryCount (2/4)
stdout
▪▪▪▪ windows:retryCount (2/4, 100ms)
▪▪▪▪ windows:retryCount (3/4)
stdout
▪▪▪▪ windows:retryCount (3/4, 100ms)
▪▪▪▪ windows:retryCount (4/4)
stdout
▪▪▪▪ windows:retryCount (4/4, 100ms)
stderr
stderr
stderr
stderr

 ERROR  Process cmd.exe failed with a 1 exit code.



