crates/cli/tests/snapshots/run_system_test__system_windows__runs_bat_script.snap
---
source: crates/cli/tests/run_system_test.rs
expression: "get_path_safe_output(&assert, fixture.path())"
---
▪▪▪▪ windows:bat
stdout
▪▪▪▪ windows:bat (100ms)

Tasks: 1 completed
 Time: 100ms

stderr


