crates/cli/tests/snapshots/run_system_test__system_windows__runs_from_project_root.snap
---
source: crates/cli/tests/run_system_test.rs
expression: "get_path_safe_output(&assert, fixture.path())"
---
▪▪▪▪ windows:runFromProject
<WORKSPACE>\windows

Tasks: 1 completed
 Time: 100ms



