crates/cli/tests/snapshots/run_system_test__system_windows__runs_from_workspace_root.snap
---
source: crates/cli/tests/run_system_test.rs
expression: "get_path_safe_output(&assert, fixture.path())"
---
▪▪▪▪ windows:runFromWorkspace
<WORKSPACE>
▪▪▪▪ windows:runFromWorkspace (100ms, 9a13c784)

Tasks: 1 completed
 Time: 100ms



